-
Bug
-
Resolution: Done
-
P0: Blocker
-
5.10.0 Alpha
-
None
-
macOS
-
54c3ab7a1018ee2e5c1767d233e1c1d9e42425c7
There seems to be some problem in qtcanvas3d tests; many tests are failing in '5.10' during qt5.git integration
Details: https://testresults.qt.io/coin/integration/qt/qt5/tasks/1504418083
Tested changes (refs/builds/qtci/5.10/1504418077):
https://codereview.qt-project.org/#/q/e38a07f4e133cc5571b6649fc378301f971d3358,n,z Update submodules on '5.10' in qt5
| For Gerrit Dashboard: QTBUG-62963 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 204492,4 | qmltest: Run each test in a separate QQuickView for test isolation | 5.10 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 204496,1 | Revert "macOS: Implement QWindow::requestUpdate() in terms of setNeedsDisplay" | 5.10 | qt/qtbase | Status: ABANDONED | 0 | 0 |
| 204505,2 | macOS: Fix support for issuing requestUpdate during expose event | 5.10 | qt/qtbase | Status: MERGED | +2 | 0 |
| 204834,2 | Blacklist Canvas3D_render_ondemand::test_render_3_ondemand on macOS | 5.10 | qt/qtcanvas3d | Status: MERGED | +2 | 0 |
| 204954,6 | Don't overwrite execute command queue when transferring queued commands | 5.10 | qt/qtcanvas3d | Status: MERGED | +2 | 0 |